# rc-raux-bot

./: .env-sample  README.md  expertise.xlsx  pyproject.toml
.chainlit/: config.toml
frontend/: app.py
public/: green-theme.css
src/rc_raux_bot/: __init__.py
src/rc_raux_bot/agents/: __init__.py  interviewer.py  triager.py
src/rc_raux_bot/api/: __init__.py  main.py
src/rc_raux_bot/tools/: raux.py  slack.py  tdx.py
